add and process properties, adjust view

--- a/src/main/resources/properties/parks.properties
+++ b/src/main/resources/properties/parks.properties
@@ -1,5 +1,10 @@
-colors=#080,#808080,#AC0,#C08
-symbols=tree
-types=playable,unmutable
+defaultColor=#808080
+otherColors=#008800,#AACC00,#CC0088
 
-playableTypeComplex=false
+types=Type2:common
+
+symbols=S1:dot,S2:tree
+
+characters=
+
+numbers=
