--- a/src/main/resources/properties/sentinels.properties
+++ b/src/main/resources/properties/sentinels.properties
@@ -1,9 +1,9 @@
 defaultColor=#808080
 otherColors=
 
-types=Type2:common,Type0:unmutable
+types=Type1:common,Type0:unmutable
 
-symbols=S1:dot,S2:bomb
+symbols=S1:dot,S2:tower
 
 characters=
 
