--- a/src/main/resources/properties/mapcreator.properties
+++ b/src/main/resources/properties/mapcreator.properties
@@ -1,1 +1,1 @@
-games=parks,sumscrapers,skyscrapers,minesweeper,lighten_up
+games=parks,minesweeper,skyscrapers,sumscrapers,lighten_up,tents,snake,abc,binary_sudoku,sentinels
