--- a/src/main/resources/properties/snake.properties
+++ b/src/main/resources/properties/snake.properties
@@ -1,10 +1,10 @@
 defaultColor=#808080
-otherColors=
+otherColors=#FFFFFF
 
 types=Type2:common,Type0:unmutable
 
-symbols=
+symbols=S1:dot
 
 characters=
 
-numbers=1,2,3,4
+numbers=0,1,2,3,4,5,6,7,8,9
