--- a/src/main/resources/properties/sumscrapers.properties
+++ b/src/main/resources/properties/sumscrapers.properties
@@ -1,5 +1,10 @@
-colors=#808080
-symbols=0,1,2,3,4
-types=playable,helper
+defaultColor=#808080
+otherColors=
 
-playableTypeComplex=false
+types=Type2:common,Type0:unmutable
+
+symbols=
+
+characters=
+
+numbers=1,2,3,4,5,6,7,8,9
