--- a/src/main/resources/properties/tents.properties
+++ b/src/main/resources/properties/tents.properties
@@ -3,8 +3,8 @@ otherColors=
 
 types=Type2:common,Type0:unmutable
 
-symbols=
+symbols=S1:dot,S2:tree,S3:tent
 
 characters=
 
-numbers=1,2,3,4
+numbers=0,1,2,3,4,5,6,7,8,9
